# coderd/apidoc/swagger.json
@@ -5093,7 +5093,7 @@
           "$ref": "#/definitions/codersdk.DERP"
         },
         "experimental": {
-          "$ref": "#/definitions/codersdk.DeploymentConfigField-bool"
+          "$ref": "#/definitions/codersdk.DeploymentConfigField-codersdk_ExperimentalConfig"
         },
         "gitauth": {
           "$ref": "#/definitions/codersdk.DeploymentConfigField-array_codersdk_GitAuthConfig"
@@ -5277,6 +5277,44 @@
         }
       }
     },
+    "codersdk.DeploymentConfigField-codersdk_ExperimentalConfig": {
+      "type": "object",
+      "properties": {
+        "default": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "enterprise": {
+          "type": "boolean"
+        },
+        "flag": {
+          "type": "string"
+        },
+        "hidden": {
+          "type": "boolean"
+        },
+        "name": {
+          "type": "string"
+        },
+        "secret": {
+          "type": "boolean"
+        },
+        "shorthand": {
+          "type": "string"
+        },
+        "usage": {
+          "type": "string"
+        },
+        "value": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
     "codersdk.DeploymentConfigField-int": {
       "type": "object",
       "properties": {
@@ -5393,6 +5431,12 @@
         },
         "experimental": {
           "type": "boolean"
+        },
+        "experimental_features": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         },
         "features": {
           "type": "object",
