# site/src/api/typesGenerated.ts
@@ -311,7 +311,7 @@ export interface DeploymentConfig {
   readonly scim_api_key: DeploymentConfigField<string>
   readonly provisioner: ProvisionerConfig
   readonly rate_limit: RateLimitConfig
-  readonly experimental: DeploymentConfigField<boolean>
+  readonly experimental: DeploymentConfigField<ExperimentalConfig>
   readonly update_check: DeploymentConfigField<boolean>
   readonly max_token_lifetime: DeploymentConfigField<number>
   readonly swagger: SwaggerConfig
@@ -338,6 +338,7 @@ export interface Entitlements {
   readonly errors: string[]
   readonly has_license: boolean
   readonly experimental: boolean
+  readonly experimental_features: string[]
   readonly trial: boolean
 }
 
@@ -1158,4 +1159,10 @@ export type WorkspaceStatus =
 export type WorkspaceTransition = "delete" | "start" | "stop"
 
 // From codersdk/deploymentconfig.go
-export type Flaggable = string | number | boolean | string[] | GitAuthConfig[]
+export type Flaggable =
+  | string
+  | number
+  | boolean
+  | string[]
+  | GitAuthConfig[]
+  | ExperimentalConfig
